app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    app: todo-app
