app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: todo-app-frontend
  ports:
  - name: http
    port: 80
    targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: todo
  labels:
    app: todo-backend
spec:
  type: ClusterIP
  selector:
    app: todo-app-backend
  ports:
  - name: http
    port: 80
    targetPort: 3000
